# espmidi

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  byte_order.h  config.h  esp_main.cpp  log.h  midi_const.h  midi_ev_id.h  midi_event.h  midi_file.cpp  midi_file.h  midi_playback.h  midi_track.cpp  midi_track.h  midi_util.cpp  midi_util.h  preproc.h  stream_util.cpp  stream_util.h
main/floppy/: floppy_playback.cpp  floppy_playback.h
main/gpio/: gpio_compat.h  gpio_dummy.c  gpio_dummy_log.c  gpio_esp32.c
